added action bar

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -5,6 +5,16 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
+    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+        style="@style/Presence"
+        android:id="@+id/actionBar"
+        android:text="@string/brand"
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:padding="10dp"
+        android:textSize="25sp" >
+    </TextView>
+    
     <ListView
         android:id="@+id/mainMenu"
         android:layout_width="match_parent"
