--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/Presence"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:padding="10dp"
-    android:textSize="20sp" >
+    android:textColor="@color/black"
+    android:textSize="18sp" >
 </TextView>
