--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+ <RelativeLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/Presence"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:layout_width="fill_parent" 
+    android:layout_height="fill_parent">
 
     <ImageView
         android:layout_width="fill_parent"
@@ -19,7 +19,23 @@
         android:id="@+id/mainMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="50dp"
         android:cacheColorHint="@android:color/transparent" >
     </ListView>
+    
+    <RelativeLayout 
+        android:id="@+id/InnerRelativeLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" >
 
-</LinearLayout>
+        <Button 
+            android:text="@string/checkin" 
+            android:id="@+id/mainButton"
+            android:layout_alignParentRight="true" 
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+        </Button>
+
+    </RelativeLayout>
+</RelativeLayout>
