--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -3,6 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:padding="10dp"
+    android:gravity="center_horizontal"
     android:textColor="@color/black"
-    android:textSize="18sp" >
+    android:textSize="20sp" >
 </TextView>
