updated icon removed the pseudo-actionbar and added color to the main button

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,36 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
- <RelativeLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+ <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/Presence"
     android:layout_width="fill_parent" 
     android:layout_height="fill_parent">
 
-    <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:background="@color/white"
-        android:contentDescription="@string/brand"
-        android:paddingTop="5dp"
-        android:src="@drawable/presence" />
-
-    <ListView
+     <ListView
         android:id="@+id/mainMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="50dp"
+        android:paddingTop="5dp"
         android:cacheColorHint="@android:color/transparent" >
     </ListView>
     
     <RelativeLayout 
-        android:id="@+id/InnerRelativeLayout"
+        android:id="@+id/innerRelativeLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true" >
 
         <Button 
-            android:text="@string/checkin" 
             android:id="@+id/mainButton"
+            android:text="@string/checkin" 
             android:layout_alignParentRight="true" 
             android:layout_width="fill_parent"
             android:layout_height="50dp">
