--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="yellow">#FFF3D5</color>
     <color name="orange">#FFD1A5</color>
     <color name="red">#C83E22</color>
+    <color name="gray">#A3A3A3</color>
 </resources>
