--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -2,8 +2,8 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:padding="10dp"
-    android:gravity="center_horizontal"
+    android:padding="15dp"
+    android:gravity="left"
     android:textColor="@color/black"
     android:textSize="21sp" >
 </TextView>
