--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,12 +3,38 @@
     style="@style/Presence"
     android:layout_width="fill_parent" 
     android:layout_height="fill_parent">
+    
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/Presence"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:baselineAligned="true"
+    android:orientation="vertical" >
 
+    <TextView
+        android:id="@+id/profileName"
+        style="@style/Presence"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="15dp"
+        android:paddingTop="25dp"
+        android:textSize="25sp" />
+
+    <TextView
+        android:id="@+id/profilePosition"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-5dp"
+        android:paddingLeft="15dp"
+        android:textColor="@color/gray"
+        android:textSize="18sp" />
+
+</LinearLayout>
      <ListView
         android:id="@+id/mainMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="5dp"
+        android:paddingTop="80dp"
         android:cacheColorHint="@android:color/transparent" >
     </ListView>
     
