--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/incidence"
-          android:title="@string/incidence"/>
-    <item android:id="@+id/settings"
-          android:title="@string/settings" />
+<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <item
+        android:id="@+id/incidence"
+        android:icon="@drawable/ic_menu_notifications"
+        android:title="@string/incidence"/>
+    <item
+        android:id="@+id/settings"
+        android:icon="@drawable/ic_menu_preferences"
+        android:title="@string/settings"/>
+
 </menu>
