--- a/res/layout/activity_list_item.xml
+++ b/res/layout/activity_list_item.xml
@@ -2,7 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:padding="15dp">
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp"
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp"
+    >
     <TextView
         android:id="@+id/timediff"
         android:layout_width="100dp"
