--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,56 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/Presence"
-    android:layout_width="fill_parent" 
-    android:layout_height="fill_parent">
-    
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/Presence"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:baselineAligned="true"
-    android:orientation="vertical" >
+    android:layout_height="fill_parent" >
 
-    <TextView
-        android:id="@+id/profileName"
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         style="@style/Presence"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="15dp"
-        android:paddingTop="25dp"
-        android:textSize="25sp" />
+        android:layout_height="fill_parent"
+        android:baselineAligned="true"
+        android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/profilePosition"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="-5dp"
-        android:paddingLeft="15dp"
-        android:textColor="@color/gray"
-        android:textSize="18sp" />
+        <TextView
+            android:id="@+id/profileName"
+            style="@style/Presence"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="15dp"
+            android:paddingTop="25dp"
+            android:textSize="25sp" />
 
-</LinearLayout>
-     <ListView
+        <TextView
+            android:id="@+id/profilePosition"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-5dp"
+            android:paddingLeft="15dp"
+            android:textColor="@color/gray"
+            android:textSize="18sp" />
+    </LinearLayout>
+
+    <ListView
         android:id="@+id/mainMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="80dp"
-        android:cacheColorHint="@android:color/transparent" >
+        android:cacheColorHint="@android:color/transparent"
+        android:paddingTop="80dp" >
     </ListView>
-    
-    <RelativeLayout 
+
+    <RelativeLayout
         android:id="@+id/innerRelativeLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true" >
 
-        <Button 
+        <Button
             android:id="@+id/mainButton"
-            android:text="@string/checkin" 
-            android:layout_alignParentRight="true" 
             android:layout_width="fill_parent"
-            android:layout_height="50dp">
+            android:layout_height="50dp"
+            android:layout_alignParentRight="true"
+            android:text="@string/checkin" >
         </Button>
-
     </RelativeLayout>
+
 </RelativeLayout>
